--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
 </head>
 <body>
     <main>
-        <ul>
-            <li>
-                <p>Lorem.</p>
-            </li>
-            <li>
-                <p>Lorem.</p>
-            </li>
-        </ul>
+        <h1>Типи даних</h1>
     </main>
     <script src="js.js"></script>
 </body>
